--- a/index.html
+++ b/index.html
@@ -18,47 +18,53 @@
 <body>
 
     <span class="loading_spinner loader_quart"></span>
-
-    <div class="logo_container">
-    <div class="logo"><span class="ffm fs_largelogo fw_largebold">Ohmyfood</span></div>
-    </div>
+    <header>
+    <div class="logo"><h1 class="ffm fs_largelogo fw_largebold">Ohmyfood</h1></div>
+    </header>
+    <main>
+        <section>
     <div class="flex reservation_container">
-    <div class="location flex"><span class="fs_smallbold brd_bottom1"><i class="fas fa-map-marker-alt"></i>Paris,Belleville</span></div>
+    <div class="location flex"><h2 class="fs_smallbold brd_bottom1"><i class="fas fa-map-marker-alt"></i>Paris,Belleville</h2></div>
+
     <div class="reservation flex">
-        <span class="fs_largebold">Reservez le menu qui <br><span class="fs_largebold mrg_2">vous convient</span></span>  
+    
+        <h1 class="fs_largebold">Reservez le menu qui <br><span class="fs_largebold mrg_2">vous convient</span></h1>  
         <span>Decouvrez des restaurants d'exception,<br><span class="mrg_2">sélectionner par nos soins</span></span>    
     <input type="button" value="Explorez nos restaurants" class="button fs_smallbold mrg_1">
     </div>
     </div>
-    
+        </section>
+        <section>
 <div class="fonctionnement flex">
-    <span class="fs_largebold">Fonctionnement</span>
+    <h1 class="fs_largebold">Fonctionnement</h1>
 <div class="fonctionnement_rectangle flex">
    <span class="cercle">1</span>
    <i class="fas fa-mobile-alt"></i>
-   <span class="fs_smallbold bold">Choisissez un restaurant</span>
+   <h2 class="fs_smallbold bold">Choisissez un restaurant</h2>
 </div>
 <div class="fonctionnement_rectangle flex bold">
     <span class="cercle">2</span>
     <i class="fas fa-list-ul"></i>
-   <span class="fs_smallbold bold">Composez votre menu</span>
+   <h2 class="fs_smallbold bold">Composez votre menu</h2>
 </div>
 <div class="fonctionnement_rectangle flex">
     <span class="cercle">3</span>
     <i class="fas fa-store"></i>
-    <span class="fs_smallbold bold">Dégustez au restaurant</span>
+    <h2 class="fs_smallbold bold">Dégustez au restaurant</h2>
  </div>
 </div>
+</section>
 
+<section>
 <div class="container_card">
 <div class="card_container flex card_container_index">
-<span class="fs_largebold absolute">Restaurant</span>
+<h1 class="fs_largebold absolute">Restaurant</h1>
 <a href="/menu.html"><div class="card">
 <div class="img_container img_gout flex">
 <div class="new flex">
 <span class="fs_smallbold fs_bold">Nouveau</span></div>
 </div>
-<span class="fs_normal mrg_card_left">La palette du goût</span><br>
+<h3 class="fs_normal mrg_card_left">La palette du goût</h3><br>
 <span class="fs_reset mrg_card_top mrg_card_left">Ménilmontant</span>
 <i class="far fa-heart"></i>
 </div></a>
@@ -70,7 +76,7 @@
 <span class="fs_smallbold fs_bold">Nouveau</span>
 </div>
 </div>
-<span class="fs_normal mrg_card_left">La note enchantée</span><br>
+<h3 class="fs_normal mrg_card_left">La note enchantée</h3><br>
 <span class="fs_reset mrg_card_top mrg_card_left">Charonne</span>
 <i class="far fa-heart"></i>
 </div></a>
@@ -81,7 +87,7 @@
         <span class="fs_smallbold fs_bold">Nouveau</span>
 </div>
 </div>
-<span class="fs_normal mrg_card_left">A la française</span><br>
+<h3 class="fs_normal mrg_card_left">A la française</h3><br>
 <span class="fs_reset mrg_card_top mrg_card_left">Cité rouge</span>
 <i class="far fa-heart"></i>
 </div></a>
@@ -91,22 +97,23 @@
         <span class="fs_smallbold fs_bold">Nouveau</span>
 </div>
 </div>
-<span class="fs_normal mrg_card_left">Le délice du sens</span><br>
+<h3 class="fs_normal mrg_card_left">Le délice du sens</h3><br>
 <span class="fs_reset mrg_card_top mrg_card_left">Folie-Méricourt</span>
 <i class="far fa-heart"></i>
 </div></a>
 </div>
 </div>
-
+</section>
+</main>
 <div class="footer_container">
 <footer class="footer flex">
  <div class="ohmyfood_container">   
-<span class="fs_normal white ffm ">Oh my food</span>
+<h4 class="fs_normal white ffm ">Oh my food</h4>
  </div>
-<div class="footer_items flex"><i class="fas fa-utensils white fs_footer_icon"></i><span class="fs_smallbold white">Proposer un restaurant</span></div>
-<div class="footer_items flex"><i class="fas fa-hands-helping white fs_footer_icon"></i><span class="fs_smallbold white mrg_left_footer">Devenir partenaire</span></div>
-<div class="footer_items"><span class="fs_smallbold white">Mentions legales</span></div>
-<div class="footer_items"><span class="fs_smallbold white"><a href="mailto: contact@ohmyfood.com" class="white">Contact</a></span></div>
+<div class="footer_items flex"><i class="fas fa-utensils white fs_footer_icon"></i><h4 class="fs_smallbold white">Proposer un restaurant</h4></div>
+<div class="footer_items flex"><i class="fas fa-hands-helping white fs_footer_icon"></i><h4 class="fs_smallbold white mrg_left_footer">Devenir partenaire</h4></div>
+<div class="footer_items"><h4 class="fs_smallbold white">Mentions legales</h4></div>
+<div class="footer_items"><h4 class="fs_smallbold white"><a href="mailto: contact@ohmyfood.com" class="white">Contact</a></h4></div>
 </footer>
 </div>
 </body>
