--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/design.css">
+    <link rel="stylesheet" href="sass/main.css">
     <link rel="stylesheet" href="sass/design_tablet.css">
     <link rel="stylesheet" href="css/design_desktop.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,18 +17,18 @@
 </head>
 <body>
       <div class="logo_container">
-<div class="logo"><a href="index.html"><i class="fas fa-arrow-left"></i></a><span class="ffm fs_largelogo fw_largebold">Ohmyfood</span></div>
+<div class="logo"><a href="index.html"><i class="fas fa-arrow-left"></i></a><h1 class="ffm fs_largelogo fw_largebold">Ohmyfood</h1></div>
 </div>
 <div class="img_menu_container">
 <div class="img_menu"><img src="/images/restaurants/française.jpg" alt="logo" class="img_menu"></div>
 </div>
  <div class="card_container flex menu center card_container_menu menu_border grid">
- <span class="ffm fs_largebold absolute_title">A la française</span><i class="far fa-heart heart_menu"></i>
+ <h1 class="ffm fs_largebold absolute_title">A la française</h1><i class="far fa-heart heart_menu"></i>
  <div class ="menu_container flex center menu_container1">
-<span class="brd_bottom">ENTREES</span>
+<h2 class="brd_bottom">ENTREES</h2>
  <div class="menu_card">
     <div class="nom">
-     <span class="fs_normal">Tartare de poulpe acidulé </span><br>
+     <h3 class="fs_normal">Tartare de poulpe acidulé </h3><br>
      <span class="pdg_top over fs_small">Aux zestes d'orange</span>
    </div>
      <div class="visible"><span class="prixbold">35€</span></div>
@@ -36,62 +36,62 @@
  </div>
  <div class="menu_card1 ">
     <div class="nom">
-        <span class="fs_normal">Velouté de légumes d'antan </span><br>
+        <h3 class="fs_normal">Velouté de légumes d'antan </h3><br>
            <span class="pdg_top over fs_small">Carotte, panais, topinambour</span></div>    
         <div class="visible"><span class="prixbold">25€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
  <div class="menu_card2">
     <div class="nom">
-        <span class="fs_normal">Soupe à l'oignon </span><br>
+        <h3 class="fs_normal">Soupe à l'oignon </h3><br>
            <span class="pdg_top over fs_small">Revisitée</span></div>    
         <div class="visible"><span class="prixbold">20€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
 </div> 
 <div class ="menu_container flex center menu_container_2">
- <span class="brd_bottom">PLATS</span>
+ <h2 class="brd_bottom">PLATS</h2>
  <div class="menu_card">
     <div class="nom">
-        <span class="fs_normal">Coquilles Saint-Jacques </span><br>
+        <h3 class="fs_normal">Coquilles Saint-Jacques </h3><br>
            <span class="pdg_top over fs_small">Accompagnées d'une purée de panais</span></div>    
         <div class="visible"><span class="prixbold">40€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
  <div class="menu_card2">
     <div class="nom">
-        <span class="fs_normal">Magret de canard </span><br>
+        <h3 class="fs_normal">Magret de canard </h3><br>
            <span class="pdg_top over fs_small">Et parmentier de pommes de terre</span></div>    
         <div class="visible"><span class="prixbold">35€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
  <div class="menu_card3">
     <div class="nom">
-        <span class="fs_normal">Pigeonneau d’Ille-et-Vilaine</span><br>
+        <h3 class="fs_normal">Pigeonneau d’Ille-et-Vilaine</h3><br>
            <span class="pdg_top over fs_small">Sur son lit de gnocchis aux légumes</span></div>    
         <div class="visible"><span class="prixbold">44€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
 </div>
 <div class ="menu_container flex center menu_container3 menu_container3_span">
- <span class="brd_bottom">DESSERTS</span>
+ <h2 class="brd_bottom">DESSERTS</h2>
  <div class="menu_card">
     <div class="nom">
-        <span class="fs_normal">Pétales de violettes glacés </span><br>
+        <h3 class="fs_normal">Pétales de violettes glacés </h3><br>
            <span class="pdg_top over fs_small">Et purée de noisettes</span></div>    
         <div class="visible"><span class="prixbold">18€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
  <div class="menu_card1">
     <div class="nom">
-        <span class="fs_normal">Fondant au chocolat</span><br>
+        <h3 class="fs_normal">Fondant au chocolat</h3><br>
            <span class="pdg_top over fs_small">Revisité</span></div>    
         <div class="visible"><span class="prixbold">22€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
  <div class="menu_card2">
     <div class="nom">
-        <span class="fs_normal">Millefeuille croustillant </span><br>
+        <h3 class="fs_normal">Millefeuille croustillant </h3><br>
            <span class="pdg_top over fs_small">Myrtilles et pâte d’amande</span></div>    
         <div class="visible"><span class="prixbold">23€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
@@ -103,12 +103,12 @@
 <div class="footer_container">
    <footer class="footer flex">
     <div class="ohmyfood_container">   
-   <span class="fs_normal white ffm ">Oh my food</span>
+   <h4 class="fs_normal white ffm ">Oh my food</h4>
     </div>
-   <div class="footer_items flex"><i class="fas fa-utensils white fs_footer_icon"></i><span class="fs_smallbold white">Proposer un restaurant</span></div>
-   <div class="footer_items flex"><i class="fas fa-hands-helping white fs_footer_icon"></i><span class="fs_smallbold white mrg_left_footer">Devenir partenaire</span></div>
-   <div class="footer_items"><span class="fs_smallbold white">Mentions legales</span></div>
-   <div class="footer_items"><span class="fs_smallbold white">Contact</span></div>
+   <div class="footer_items flex"><i class="fas fa-utensils white fs_footer_icon"></i><h4 class="fs_smallbold white">Proposer un restaurant</h4></div>
+   <div class="footer_items flex"><i class="fas fa-hands-helping white fs_footer_icon"></i><h4 class="fs_smallbold white mrg_left_footer">Devenir partenaire</h4></div>
+   <div class="footer_items"><h4 class="fs_smallbold white">Mentions legales</h4></div>
+   <div class="footer_items"><h4 class="fs_smallbold white">Contact</h4></div>
    </footer>
    </div>
 </body>
