--- a/menu1.html
+++ b/menu1.html
@@ -16,10 +16,14 @@
     <title>Document</title>
 </head>
 <body>
-<div class="logo"><a href="index.html"><i class="fas fa-arrow-left"></i></a><img src="/images/logo/ohmyfood@2x.svg" alt="logo"></div>
+  <div class="logo_container">
+    <div class="logo"><a href="index.html"><i class="fas fa-arrow-left"></i></a><h1 class="ffm fs_largelogo fw_largebold">Ohmyfood</h1></div>
+    </div>
+    <div class="img_menu_container">
 <div class="img_menu"><img src="/images/restaurants/note.jpg" alt="logo" class="img_menu mrg_img_menu"></div>
- <div class="card_container flex menu mrg_img_menu1">
- <span class="ffm fs_largebold">La note enchantée</span>
+</div>
+ <div class="card_container flex menu center card_container_menu menu_border grid">
+ <h1 class="ffm fs_largebold absolute_title">La note enchantée</h1>
  <svg id='heart' height="0" width="0">
     <defs>
       <clipPath id="svgPath">
@@ -37,11 +41,11 @@
   
     <a href='#' class='clip'></a>
   </div>
- <div class="menu_container flex">
-<span class="brd_bottom">ENTREES</span>
+ <div class="menu_container flex center menu_container1 mrg_top_menu_container">
+<h2 class="brd_bottom">ENTREES</h2>
  <div class="menu_card">
     <div class="nom">
-    <span class="fs_normal">Ravioles de foie gras  </span><br>
+    <h3 class="fs_normal">Ravioles de foie gras </h3><br>
     <span class="pdg_top over fs_small">Accompagnés de leur crème à la truffe</span>
     </div>
     <div class="visible"><span class="prixbold">25€</span></div>
@@ -49,7 +53,7 @@
     </div>
  <div class="menu_card1">
     <div class="nom">
-    <span class="fs_normal">Caviar osciètre  </span><br>
+    <h3 class="fs_normal">Caviar osciètre  </h3><br>
     <span class="pdg_top over fs_small">Sur blini à la farine de blé noir</span>
     </div>
     <div class="visible"><span class="prixbold">35€</span></div>
@@ -57,7 +61,7 @@
 </div>
  <div class="menu_card2">
     <div class="nom">
-        <span class="fs_normal">Homard et espuma de potiron </span><br>
+        <h3 class="fs_normal">Homard et espuma de potiron </h3><br>
         <span class="pdg_top over fs_small">Mariné aux zestes d'orange</span>
         </div>
         <div class="visible"><span class="prixbold">20€</span></div>
@@ -66,18 +70,18 @@
 
  <div class="menu_card3">
     <div class="nom">
-        <span class="fs_normal">Foie gras de canard cuit entier </span><br>
+        <h3 class="fs_normal">Foie gras de canard cuit entier </h3><br>
         <span class="pdg_top over fs_small">Confiture de figue et pain toasté</span>
         </div>
         <div class="visible"><span class="prixbold">35€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
 </div>
-<div class="menu_container flex">
- <span class="brd_bottom">PLATS</span>
+<div class="menu_container flex center menu_container2">
+ <h2 class="brd_bottom">PLATS</h2>
  <div class="menu_card">
     <div class="nom">
-        <span class="fs_normal">Noix de coquilles Saint-Jacques </span><br>
+        <h3 class="fs_normal">Noix de coquilles Saint-Jacques </h3><br>
         <span class="pdg_top over fs_small">Sur lit de purée de céleri-rave</span>
         </div>
         <div class="visible"><span class="prixbold">40€</span></div>
@@ -85,7 +89,7 @@
  </div>
  <div class="menu_card1">
     <div class="nom">
-        <span class="fs_normal">Langoustine poêlée </span><br>
+        <h3 class="fs_normal">Langoustine poêlée </h3><br>
         <span class="pdg_top over fs_small">Purée de patate douce</span>
         </div>
         <div class="visible"><span class="prixbold">35€</span></div>
@@ -93,18 +97,18 @@
  </div>
  <div class="menu_card2">
     <div class="nom">
-        <span class="fs_normal">Mijoté de queue de boeuf  </span><br>
+        <h3 class="fs_normal">Mijoté de queue de boeuf  </h3><br>
         <span class="pdg_top over fs_small">Et riz sauvage aux zestes de citron</span>
         </div>
         <div class="visible"><span class="prixbold">44€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
 </div>
-<div class="menu_container flex">
- <span class="brd_bottom">DESSERTS</span>
+<div class="menu_container flex center menu_container3 menu_container3_span mrg_top_menu_container">
+ <h2 class="brd_bottom">DESSERTS</h2>
  <div class="menu_card">
     <div class="nom">
-        <span class="fs_normal">Macaron noisette et chocolat </span><br>
+        <h3 class="fs_normal">Macaron noisette et chocolat </h3><br>
         <span class="pdg_top over fs_small">Glace au caramel brun et sel de Guérande</span>
         </div>
         <div class="visible"><span class="prixbold">18€</span></div>
@@ -112,7 +116,7 @@
  </div>
  <div class="menu_card1">
     <div class="nom">
-        <span class="fs_normal">Baba au rhum revisité  </span><br>
+        <h3 class="fs_normal">Baba au rhum revisité  </h3><br>
         <span class="pdg_top over fs_small">Avec son coulis de citron</span>
         </div>
         <div class="visible"><span class="prixbold">22€</span></div>
@@ -120,7 +124,7 @@
  </div>
  <div class="menu_card2">
     <div class="nom">
-        <span class="fs_normal">Tarte au citron meringuée </span><br>
+        <h3 class="fs_normal">Tarte au citron meringuée </h3><br>
         <span class="pdg_top over fs_small">Déstructurée</span>
         </div>
         <div class="visible"><span class="prixbold">23€</span></div>
@@ -129,12 +133,17 @@
 </div>
  <div class="btn_container flex"><input type="button" value="Commander" class="button fs_smallbold btn_menu fs_smallbold"></div>
 </div>
-<div class="footer flex">
-    <span class="fs_normal white ffm">Oh my food</span>
-    <div class="footer_items flex"><i class="fas fa-utensils white fs_footer_icon"></i><span class="fs_smallbold white">Proposer un restaurant</span></div>
-    <div class="footer_items flex"><i class="fas fa-hands-helping white fs_footer_icon"></i><span class="fs_smallbold white mrg_left_footer">Devenir partenaire</span></div>
-    <div class="footer_items"><span class="fs_smallbold white">Mentions legales</span></div>
-    <div class="footer_items"><span class="fs_smallbold white">Contact</span></div>
-    </div>
+
+<div class="footer_container">
+  <footer class="footer flex">
+   <div class="ohmyfood_container">   
+  <h4 class="fs_normal white ffm ">Oh my food</h4>
+   </div>
+  <div class="footer_items flex"><i class="fas fa-utensils white fs_footer_icon"></i><h4 class="fs_smallbold white">Proposer un restaurant</h4></div>
+  <div class="footer_items flex"><i class="fas fa-hands-helping white fs_footer_icon"></i><h4 class="fs_smallbold white mrg_left_footer">Devenir partenaire</h4></div>
+  <div class="footer_items"><h4 class="fs_smallbold white">Mentions legales</h4></div>
+  <div class="footer_items"><h4 class="fs_smallbold white">Contact</h4></div>
+  </footer>
+  </div>
 </body>
 </html>
