--- a/menu2.html
+++ b/menu2.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="css/design.css">
+    <link rel="stylesheet" href="sass/main.css">
     <link rel="stylesheet" href="css/design_desktop.css">
     <link rel="stylesheet" href="sass/design_tablet.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,15 +16,19 @@
     <title>Document</title>
 </head>
 <body>
-<div class="logo"><a href="index.html"><i class="fas fa-arrow-left"></i></a><img src="/images/logo/ohmyfood@2x.svg" alt="logo"></div>
+    <div class="logo_container">
+        <div class="logo"><a href="index.html"><i class="fas fa-arrow-left"></i></a><h1 class="ffm fs_largelogo fw_largebold">Ohmyfood</h1></div>
+        </div>
+        <div class="img_menu_container">
 <div class="img_menu"><img src="/images/restaurants/gout.jpg" alt="logo" class="img_menu"></div>
- <div class="card_container flex menu">
- <span class="ffm fs_largebold">La palette du goût</span><i class="far fa-heart heart_menu"></i>  
- <div class="menu_container flex">
-<span class="brd_bottom">ENTREES</span>
+</div>
+ <div class="card_container flex menu center card_container_menu menu_border grid">
+ <h1 class="ffm fs_largebold absolute_title">La palette du goût</h1><i class="far fa-heart heart_menu"></i>  
+ <div class="menu_container flex center menu_container1">
+<h2 class="brd_bottom">ENTREES</h2>
  <div class="menu_card">
     <div class="nom">
-        <span class="fs_normal">Fricassée d'escargot</span><br>
+        <h3 class="fs_normal">Fricassée d'escargot</h3><br>
         <span class="pdg_top over fs_small">Au piment d'Espelette </span>
         </div>
         <div class="visible"><span class="prixbold">25€</span></div>
@@ -33,7 +37,7 @@
 
  <div class="menu_card1">
     <div class="nom">
-        <span class="fs_normal">Foie gras de canard mi-cuit</span><br>
+        <h3 class="fs_normal">Foie gras de canard mi-cuit</h3><br>
         <span class="pdg_top over fs_small">Et ses copeaux de truffe noire</span>
         </div>
         <div class="visible"><span class="prixbold">35€</span></div>
@@ -41,18 +45,18 @@
  </div>
  <div class="menu_card2">
     <div class="nom">
-        <span class="fs_normal">Oeuf au plat</span><br>
+        <h3 class="fs_normal">Oeuf au plat</h3><br>
         <span class="pdg_top over fs_small">Assaisonné à la truffe sur lit de caviar</span>
         </div>
         <div class="visible"><span class="prixbold">20€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
 </div>
-<div class="menu_container flex">
- <span class="brd_bottom">PLATS</span>
+<div class="menu_container flex center menu_container2">
+ <h2 class="brd_bottom">PLATS</h2>
  <div class="menu_card">
     <div class="nom">
-        <span class="fs_normal">Filet de boeuf aux herbes</span><br>
+        <h3 class="fs_normal">Filet de boeuf aux herbes</h3><br>
         <span class="pdg_top over fs_small">Accompagné de sa ribambelle de légumes</span>
         </div>
         <div class="visible"><span class="prixbold">40€</span></div>
@@ -60,7 +64,7 @@
  </div>
  <div class="menu_card1">
     <div class="nom">
-        <span class="fs_normal">Parmentier de queue de boeuf</span><br>
+        <h3 class="fs_normal">Parmentier de queue de boeuf</h3><br>
         <span class="pdg_top over fs_small">À la truffe noire sur sa purée de panais</span>
         </div>
         <div class="visible"><span class="prixbold">35€</span></div>
@@ -68,18 +72,18 @@
  </div>
  <div class="menu_card2">
     <div class="nom">
-        <span class="fs_normal">Filet de turbot</span><br>
+        <h3 class="fs_normal">Filet de turbot</h3><br>
         <span class="pdg_top over fs_small">Aux agrumes</span>
         </div>
         <div class="visible"><span class="prixbold">44€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
-</div>
-<div class="menu_container flex">
- <span class="brd_bottom">DESSERTS</span>
+</div> 
+<div class="menu_container flex center menu_container3 menu_container3_span">
+ <h2 class="brd_bottom">DESSERTS</h2>
  <div class="menu_card">
     <div class="nom">
-        <span class="fs_normal">Paris-Brest</span><br>
+        <h3 class="fs_normal">Paris-Brest</h3><br>
         <span class="pdg_top over fs_small">Revisité</span>
         </div>
         <div class="visible"><span class="prixbold">18€</span></div>
@@ -87,7 +91,7 @@
  </div>
  <div class="menu_card1">
     <div class="nom">
-        <span class="fs_normal">Macaron au chocolat d'exception</span><br>
+        <h3 class="fs_normal">Macaron au chocolat d'exception</h3><br>
         <span class="pdg_top over fs_small">Assaisonné à la truffe sur lit de caviar</span>
         </div>
         <div class="visible"><span class="prixbold">20€</span></div>
@@ -95,7 +99,7 @@
  </div>
  <div class="menu_card2">
     <div class="nom">
-        <span class="fs_normal">Mousse au chocolat </span><br>
+        <h3 class="fs_normal">Mousse au chocolat </h3><br>
         <span class="pdg_top over fs_small">Au piment d'Espelette et à la truffe noire</span>
         </div>
         <div class="visible"><span class="prixbold">23€</span></div>
@@ -104,12 +108,17 @@
 </div>
  <div class="btn_container flex"><input type="button" value="Commander" class="button fs_smallbold btn_menu fs_smallbold"></div>
 </div>
-<div class="footer flex">
-    <span class="fs_normal white ffm">Oh my food</span>
-    <div class="footer_items flex"><i class="fas fa-utensils white fs_footer_icon"></i><span class="fs_smallbold white">Proposer un restaurant</span></div>
-    <div class="footer_items flex"><i class="fas fa-hands-helping white fs_footer_icon"></i><span class="fs_smallbold white mrg_left_footer">Devenir partenaire</span></div>
-    <div class="footer_items"><span class="fs_smallbold white">Mentions legales</span></div>
-    <div class="footer_items"><span class="fs_smallbold white">Contact</span></div>
+
+<div class="footer_container">
+    <footer class="footer flex">
+     <div class="ohmyfood_container">   
+    <h4 class="fs_normal white ffm ">Oh my food</h4>
+     </div>
+    <div class="footer_items flex"><i class="fas fa-utensils white fs_footer_icon"></i><h4 class="fs_smallbold white">Proposer un restaurant</h4></div>
+    <div class="footer_items flex"><i class="fas fa-hands-helping white fs_footer_icon"></i><h4 class="fs_smallbold white mrg_left_footer">Devenir partenaire</h4></div>
+    <div class="footer_items"><h4 class="fs_smallbold white">Mentions legales</h4></div>
+    <div class="footer_items"><h4 class="fs_smallbold white">Contact</h4></div>
+    </footer>
     </div>
 </body>
 </html>
