--- a/menu3.html
+++ b/menu3.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="css/design.css">
+    <link rel="stylesheet" href="sass/main.css">
     <link rel="stylesheet" href="css/design_desktop.css">
     <link rel="stylesheet" href="sass/design_tablet.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,24 +16,28 @@
     <title>Document</title>
 </head>
 <body>
-<div class="logo"><a href="index.html"><i class="fas fa-arrow-left"></i></a><img src="/images/logo/ohmyfood@2x.svg" alt="logo"></div>
+    <div class="logo_container">
+        <div class="logo"><a href="index.html"><i class="fas fa-arrow-left"></i></a><h1 class="ffm fs_largelogo fw_largebold">Ohmyfood</h1></div>
+        </div>
+        <div class="img_menu_container">
 <div class="img_menu"><img src="/images/restaurants/delice.jpg" alt="logo" class="img_menu"></div>
- <div class="card_container flex menu">
- <span class="ffm fs_largebold">Le delice des sens</span><i class="far fa-heart heart_menu"></i>  
- <div class="menu_container flex">
- <span class="brd_bottom">ENTREES</span>
+</div>
+ <div class="card_container flex menu center card_container_menu menu_border grid">
+ <h1 class="ffm fs_largebold absolute_title">Le delice des sens</h1><i class="far fa-heart heart_menu"></i>  
+ <div class="menu_container flex center menu_container1">
+ <h2 class="brd_bottom">ENTREES</h2>
  <div class="menu_card">
  <div class="nom">
-    <span class="fs_normal">Tartare de thon</span><br>
+    <h3 class="fs_normal">Tartare de thon</h3><br>
     <span class="pdg_top over fs_small">Assaisonné au yuzu</span>
     </div>
     <div class="visible"><span class="prixbold">25€</span></div>
     <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
     </div>
- </div>
+
  <div class="menu_card1">
     <div class="nom">
-        <span class="fs_normal">Bouchée de homard croustillant </span><br>
+        <h3 class="fs_normal">Bouchée de homard croustillant </h3><br>
         <span class="pdg_top over fs_small">Et sa farandole de petits légumes</span>
         </div>
         <div class="visible"><span class="prixbold">35€</span></div>
@@ -41,26 +45,27 @@
  </div>
  <div class="menu_card2">
     <div class="nom">
-        <span class="fs_normal">Velouté de cèpes </span><br>
+        <h3 class="fs_normal">Velouté de cèpes </h3><br>
         <span class="pdg_top over fs_small">Aux truffes</span>
         </div>
         <div class="visible"><span class="prixbold">20€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
+ </div>
 
- <div class="menu_container flex">
- <span class="brd_bottom">PLATS</span>
- <div class="menu_card">
-    <div class="nom">
-        <span class="fs_normal">Poulet rôti aux herbes de Provence </span><br>
-        <span class="pdg_top over fs_small">Et sa crème de truffe</span>
+ <div class="menu_container flex center menu_container2">
+ <h2 class="brd_bottom">PLATS</h2>
+ <div class="menu_card_provence">
+    <div class="nom plat_margin">
+        <h3 class="fs_normal ">Poulet rôti aux herbes de<br> Provence </h3><br>
+        <span class="pdg_top over fs_small plat_margin">Et sa crème de truffe</span>
         </div>
         <div class="visible"><span class="prixbold">40€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
  <div class="menu_card1">
     <div class="nom">
-        <span class="fs_normal">Langouste rôtie </span><br>
+        <h3 class="fs_normal">Langouste rôtie </h3><br>
         <span class="pdg_top over fs_small">Et ses légumes de saison</span>
         </div>
         <div class="visible"><span class="prixbold">35€</span></div>
@@ -68,18 +73,18 @@
  </div>
  <div class="menu_card2">
     <div class="nom">
-        <span class="fs_normal">Côte de boeuf Angus</span><br>
+        <h3 class="fs_normal">Côte de boeuf Angus</h3><br>
         <span class="pdg_top over fs_small">Et sa purée de panais</span>
         </div>
         <div class="visible"><span class="prixbold">44€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
  </div>
- <div class="menu_container flex">
- <span class="brd_bottom">DESSERTS</span>
+ <div class="menu_container flex center menu_container3 menu_container3_span">
+ <h2 class="brd_bottom">DESSERTS</h2>
  <div class="menu_card">
     <div class="nom">
-        <span class="fs_normal">Farandole de desserts</span><br>
+        <h3 class="fs_normal">Farandole de desserts</h3><br>
         <span class="pdg_top over fs_small">Du chef</span>
         </div>
         <div class="visible"><span class="prixbold">18€</span></div>
@@ -87,7 +92,7 @@
  </div>
  <div class="menu_card1">
     <div class="nom">
-        <span class="fs_normal">Crème brulée</span><br>
+        <h3 class="fs_normal">Crème brulée</h3><br>
         <span class="pdg_top over fs_small">Revisitée</span>
         </div>
         <div class="visible"><span class="prixbold">22€</span></div>
@@ -95,7 +100,7 @@
  </div>
  <div class="menu_card2">
     <div class="nom">
-        <span class="fs_normal">Tiramisu </span><br>
+        <h3 class="fs_normal">Tiramisu </h3><br>
         <span class="pdg_top over fs_small">À la noisette</span>
         </div>
         <div class="visible"><span class="prixbold">23€</span></div>
@@ -105,12 +110,17 @@
  
  <div class="btn_container flex"><input type="button" value="Commander" class="button fs_smallbold btn_menu fs_smallbold"></div>
  </div>
- <div class="footer flex">
-    <span class="fs_normal white ffm">Oh my food</span>
-    <div class="footer_items flex"><i class="fas fa-utensils white fs_footer_icon"></i><span class="fs_smallbold white">Proposer un restaurant</span></div>
-    <div class="footer_items flex"><i class="fas fa-hands-helping white fs_footer_icon"></i><span class="fs_smallbold white mrg_left_footer">Devenir partenaire</span></div>
-    <div class="footer_items"><span class="fs_smallbold white">Mentions legales</span></div>
-    <div class="footer_items"><span class="fs_smallbold white">Contact</span></div>
+ 
+<div class="footer_container">
+    <footer class="footer flex">
+     <div class="ohmyfood_container">   
+    <h4 class="fs_normal white ffm ">Oh my food</h4>
+     </div>
+    <div class="footer_items flex"><i class="fas fa-utensils white fs_footer_icon"></i><h4 class="fs_smallbold white">Proposer un restaurant</h4></div>
+    <div class="footer_items flex"><i class="fas fa-hands-helping white fs_footer_icon"></i><h4 class="fs_smallbold white mrg_left_footer">Devenir partenaire</h4></div>
+    <div class="footer_items"><h4 class="fs_smallbold white">Mentions legales</h4></div>
+    <div class="footer_items"><h4 class="fs_smallbold white">Contact</h4></div>
+    </footer>
     </div>
 </body>
 </html>
